fixed swiper overflow y issue

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 html {
     font-size: 60%;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body {
@@ -479,13 +480,14 @@ span {
 
 /* Swiper */
 #swiper-section {
-    height: 60rem;
+    height: auto;
+    max-height: 60vh; /* !!!!!! Limit the height of the slides */
     /* background-color: #05fd99; */
 }
 
 .sectionWrapper {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -494,7 +496,7 @@ span {
 
 .swiper {
   width: 100%;
-  height: 100%;
+  height: auto;
   /* padding: 50px 20px; */
   overflow: visible;
 }
@@ -504,7 +506,7 @@ span {
   right: -5%;
   top: -50%;
   width: 200%;
-  height: 200%;
+  /* height: 200%; */
 }
 
 .swiper .swiper-wrapper {
